# Finam_market_data_producer

./: .env_example  .gitignore  README.md  main.py  pyproject.toml
docker/: Dockerfile
src/: config.py  producer_dom_data.py
